--- a/ExercEstruturasCondicionais.ipynb
+++ b/ExercEstruturasCondicionais.ipynb
@@ -98,7 +98,7 @@
         "idade = 2022 - ano\n",
         "print (\"Você tem\", idade, \"anos\")\n",
         "if idade >= 16:\n",
-        "  print (\"Parabéns, você já pode votar! Vá tirar o Bolsonaro!\")\n",
+        "  print (\"Parabéns, você já pode votar!\")\n",
         "else:\n",
         "  print (\"Você ainda não pode votar!\")  \n",
         "\n",
