--- a/BeatlesLIST.ipynb
+++ b/BeatlesLIST.ipynb
@@ -57,7 +57,7 @@
         "#passo 1: criar uma lista vazia com o nome beatles;\n",
         "#passo 2: utilizar o método append() para adicionar os seguintes membros da banda à lista: John Lennon, Paul McCartney, e George Harrison;\n",
         "#passo 3: utilizar o loop for e o método append() para solicitar ao utilizador que adicione os seguintes membros da banda à lista: Stu Sutcliffe, e Pete Best;\n",
-        "#passo 4: utilizar a instrução del para remover Stu Sutcliffe e Pete Best da lista;\n",
+        "#passo 4: utilizar a instrução del para remover Stu Sutcliffe da lista;\n",
         "#passo 5: utilizar o método insert() para adicionar Ringo Starr ao início da lista.\n",
         "\n",
         "beatles = []\n",
