--- a/ExercBREAKeCONTINUE.ipynb
+++ b/ExercBREAKeCONTINUE.ipynb
@@ -6,7 +6,7 @@
       "name": "ExercBREAKeCONTINUE.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQXH60DC38gRaFQPbpuzYi",
+      "authorship_tag": "ABX9TyMuCLAxPkU/behz8+Mfmhoe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,8 +89,7 @@
         "    palavra = str (input(\"Digite uma palavra:\"))\n",
         "    \n",
         "if cont != 0:\n",
-        "    print (\"You've successfully left the loop.\")\n",
-        
+        "    print (\"You've successfully left the loop.\")\n"
       ],
       "metadata": {
         "id": "xzqSxRXJdwnH"
