--- a/ExercBREAKeCONTINUE.ipynb
+++ b/ExercBREAKeCONTINUE.ipynb
@@ -6,7 +6,7 @@
       "name": "ExercBREAKeCONTINUE.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMuCLAxPkU/behz8+Mfmhoe",
+      "authorship_tag": "ABX9TyNhkMEKdldB5y49UCyopp/T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,10 +64,7 @@
         "    palavra = str (input(\"Digite uma palavra:\"))\n",
         "    \n",
         "if cont != 0:\n",
-        "    print (\"You've successfully left the loop.\")\n",
-        "else:\n",
-        "    print (\"vai te lascar\")\n",
-        "    "
+        "    print (\"You've successfully left the loop.\")\n"
       ],
       "metadata": {
         "id": "G-IqllPodjUS"
