--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Exercícios de algoritmo em Python
+Desafios de código em Python utilizando: ESTRUTURAS CONDICIONAIS (if, elif, else), ESTRUTURAS DE REPETIÇÃO (for, while), TUPLAS, 
+LISTAS, DICIONÁRIOS, FUNÇÕES, MATRIZES, EXCECPTIONS ERRORS, MANIPULAÇÃO DE STRINGS, BREAK e CONTINUE.
